Minority font, fix align, new modal

--- a/bp-web/app/assets/stylesheets/process_list.scss
+++ b/bp-web/app/assets/stylesheets/process_list.scss
@@ -156,7 +156,7 @@ ul.type-tabs li a:hover {
 
 
 .processList .process_content {
-  margin-left: 3%;
+  margin-left: 8%;
   margin-top: 46px;
   max-width: 472px;
 }
