--- a/bp-web/public/css/app.css
+++ b/bp-web/public/css/app.css
@@ -2748,12 +2748,26 @@ color:#fff;
     margin-left: 20px;
 }
 .ngdialog-content .container {
-  width: 980px;
+  width: auto;
   display: block;
   margin-top: -15px;
 }
 .ngdialog-content .container h1 {
   padding-bottom: 15px;
+  font-family: 'Proxima Nova',sans-serif;
+  font-weight: 600;
+  color: #3c4151;
+  font-size: 20px;
+  text-align: center;
+  padding: 20px 0;
+  margin-bottom: 0;
+  background: #fff;
+  border-bottom: 1px solid #d7dfe9;
+  -webkit-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+  margin: 0;
+  margin-left: -30px;
+  margin-right: -31px;
 }
 
 footer .applicationFooterListLink,footer .applicationFooterCopyrightLink {
